--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -77,12 +77,10 @@ http://ionicframework.com/docs/theming/ */
 }
 
 @media (prefers-color-scheme: dark) {
-  /*
-   * Dark Colors
-   * -------------------------------------------
-   */
-
   body {
+    --ion-background-color: #121212;
+    --ion-background-color-rgb: 18,18,18;
+    --ion-text-color: #ffffff;
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66,140,255;
     --ion-color-primary-contrast: #ffffff;
@@ -241,6 +239,13 @@ html {
   --ion-dynamic-font: var(--ion-default-dynamic-font);
 }
 
+/* App.css */
+.dark {
+  --ion-background-color: #121212;
+  --ion-background-color-rgb: 18,18,18;
+  --ion-text-color: #ffffff;
+  /* ... otros estilos de modo oscuro ... */
+}
 
 /* Estilos para el encabezado de la tabla */
 .table-card .table-header ion-col {
